--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.18.1",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
